# depot-dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.yaml  pyproject.toml
.github/: copilot-instructions.md
config/: config.yaml  factors.yaml  landing_page_example.yaml  portfolios_example.yaml
config/etfs/em/: emerging_markets.yaml
config/etfs/small_caps/: europe.yaml  world.yaml
config/etfs/world/: developed.yaml
docs/: ARCH_DECISIONS.md  DOMAIN_MODEL.md  STREAMLIT_APP.md  STRUCTURE.md
playground/: playground.py  portfolio.py  yahoo.py
reports/: WI-01-provider-evaluation.md
src/: __init__.py  main.py
src/analysis/: __init__.py  fx.py  metrics.py  playground.py  portfolio.py  ttm.py
src/app/: 00_Startpage.py  main.py  verify_structure.py
src/app/logic/: __init__.py  common.py  data_loader.py  details.py  entry.py  etf.py  overview.py  portfolio.py  screener.py  startpage.py
src/app/logic/stock_detail/: __init__.py  loader.py
src/app/pages/: 01_Overview.py  02_Asset_Detail.py  02_Stock_detail.py  03_Stock_Screener.py  04_Entry_Analysis.py  09_Admin.py
src/app/views/: __init__.py  colors.py  common.py  constants.py  entry.py  overview.py  screener.py  startpage.py  stock_detail.py
src/app/views/stock_detail/: __init__.py  charts.py
src/config/: landing_page.py  models.py  settings.py
src/core/: admin_engine.py  config.py  domain_models.py  etf_loader.py  file_manager.py  mapper.py  normalization.py  stock_data.py  strategy_engine.py  strategy_models.py
src/data_mgmt/: __init__.py  archiver.py
src/etl/: __init__.py  extract.py  pipeline.py  research_providers.py  research_providers_openbb.py  snapshot.py
tests/: __init__.py  test_restore.py  test_wi02_core.py  test_wi03_pipeline.py
