[project]
name = "quality-core"
version = "0.1.0"
description = "Quality Core - Data Engineering Pipeline with Streamlit Dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=0.20.0",
    "pydantic>=2.0.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "yfinance>=0.2.35",
    "openbb>=4.1.3",
    "openbb-yfinance>=1.5.0",
    "openbb-fmp>=1.5.1",
    "openbb-alpha-vantage>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "B", "UP", "N", "PD"]

[tool.ruff.lint]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
