[project]
name = "quality-core"
version = "0.2.0"
description = "Quality Core - Data Engineering Pipeline with Streamlit Dashboard"
readme = "README.md"
authors = [
    { name = "Tim Lenzen", email = "timzen@gmx.de" },
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "polars>=0.20.0",
    "pydantic>=2.0.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "yfinance>=0.2.35",
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pydantic-settings>=2.0.0",
    "types-PyYAML>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "B", "UP", "N", "PD"]

[tool.ruff.per-file-ignores]
"src/app/00_Startpage.py" = ["N999"]

[tool.ruff.lint]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[project.scripts]
qc = "src.main:main"
